# hass-integration-kubernetes

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  validate.yaml
custom_components/kubernetes/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  node.py  number.py  sensor.py  strings.json
custom_components/kubernetes/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_init.py
